# atlas-alpha

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  AUTH.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  M3.5_PLAN.md  M4.1_PLAN.md  M4.2_PLAN.md  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml
.circleci/: config.yml
.cursor/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-atlas/: action.yml
.github/workflows/: ci.yml  release.yml  security-scheduled.yml
.reports/: codemap-diff.txt
.semgrep/: atlas-security.yml
config/: default_policies.json
docs/: FRONTEND_DESIGN_SPECIFICATION.md  README.md
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/architecture/: ARCHITECTURE.md
docs/constitution/: AGENTS.md  CLAUDE.md
docs/guides/: AUTH.md  CUSTOM_CONNECTORS.md  HANDOFF.md  RELEASE.md  RUNBOOK.md  TOOL_SCHEMAS.md
docs/plans/: M4.2_PLAN.md  M4.3_PLAN.md  M4.4_PLAN.md  M4.5_PLAN.md  M4.6_PLAN.md  M4.7_PLAN.md  M4.8a_PLAN.md  M4.8b_PLAN.md  M4.8c_PLAN.md  M4.8d_PLAN.md
evals/: README.md  __init__.py  run_evals.py  run_gate.py
evals/deterministic/: __init__.py  oracles.py  scenarios.py
evals/llm_judge/: __init__.py  datasets.py  judge.py
scripts/: demo_approval.py  demo_knowledge.py  demo_knowledge_postgres.py  demo_persistence.py  demo_rbac.py  manage_credentials.py  manage_policy.py  run_api.py
src/atlas/: __init__.py  actions.py  adapter_engine.py  config.py  execution.py  governance.py  llm.py  tool_egress.py  tools.py
src/atlas/governance/: __init__.py  audit.py  confidence.py  credentials.py  policy.py  rbac.py
src/atlas/integrations/: __init__.py  calendar.py  email.py  gmail.py  oauth.py  oauth_binding.py  slack.py  slack_user.py
src/atlas/interface/: __init__.py  app.py  auth.py  kg_routes.py  oauth_pending.py  oauth_routes.py  oauth_state.py  rate_limit.py  resume_lock.py  routes.py  schemas.py  security.py  sse.py
tests/: conftest.py  helpers.py  test_adapter_engine.py  test_audit_chain.py  test_audit_events.py  test_ci_contracts.py  test_confidence.py  test_config_oauth.py  test_config_oidc.py  test_config_rate_limit.py  test_credential_vault.py  test_email_integration.py  test_embeddings.py  test_eval_gate.py  test_extraction.py  test_graph_approval.py  test_hashicorp_vault.py  test_idempotency.py  test_ingestion.py  test_ingestion_api.py  test_interface.py  test_interface_auth.py  test_interface_postgres.py  test_interface_stream.py  test_knowledge_postgres.py  test_knowledge_rbac.py  test_knowledge_store.py  test_llm.py  test_manage_policy_cli.py  test_oauth_binding.py  test_oauth_integrations.py  test_oauth_routes.py  test_oauth_token_parsing.py  test_persistence_postgres.py  test_planner.py  test_policy.py  test_policy_postgres.py  test_policy_store.py  test_rate_limit.py  test_rbac.py  (+5 more)
(+21 files in other folders)
