[project]
name = "atlas-alpha"
version = "0.1.0"
description = "atlas — an agent-first enterprise workspace (LangGraph + Claude)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # langsmith is transitive (via langchain); floor pinned to patch GHSA-f4xh-w4cj-qxq8.
    "langsmith>=0.9.0",
    "psycopg-pool>=3.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",  # patches GHSA-4xgf-cpjx-pc3j
    "pyjwt[crypto]>=2.13.0",  # OIDC/JWT bearer-token validation (M3.3); pulls in cryptography
    "python-dotenv>=1.2.2",
    "resend>=2.32.2",
    "slack-sdk>=3.42.0",
    "upstash-ratelimit>=1.1.0",  # per-principal HTTP rate limiting (M3.6); pulls in upstash-redis
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.hatch.build.targets.sdist]
exclude = [".cursor", ".github", "tests", "evals", "docs", "scripts", ".venv"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# Put the repo root on sys.path so tests can import the (non-installed) `evals` gate package.
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: requires a live Postgres via DATABASE_URL (skipped otherwise)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

# LangGraph's StateGraph/add_node/BaseCheckpointSaver are heavily-overloaded generics that don't
# satisfy mypy --strict at the call site. We keep strict typing for all of atlas's own logic and
# scope these two error codes to just the graph-assembly module that touches that API.
[[tool.mypy.overrides]]
module = "atlas.orchestration.graph"
disable_error_code = ["type-arg", "call-overload"]

# Tests call the compiled graph's heavily-overloaded .invoke(); same LangGraph typing friction.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["call-overload"]

# The eval-gate runners drive the compiled graph's heavily-overloaded .invoke()/Command(resume=);
# same LangGraph typing friction as orchestration.graph and tests. Scoped to just the two modules
# that touch that API — the rest of evals stays under full strict typing.
[[tool.mypy.overrides]]
module = ["evals.deterministic.oracles", "evals.llm_judge.judge"]
disable_error_code = ["call-overload"]
